# weather-agent

./: README.md  devlog.md  pyproject.toml  test_env.py
app/: main.py  weather_agent.py
app/data/: app_info.json
app/templates/: index.html
